@@ -4054,6 +4054,11 @@ sub scan_one_configure_file
 	    $in_ac_output = 1;
 	    $ac_output_line = $.;
 	}
+        if (! $in_ac_output && s/AC_CONFIG_FILES\s*\(\[?//)
+        {
+           $in_ac_output = 1;
+           $ac_output_line = $.;
+        }
 	if ($in_ac_output)
 	{
 	    local ($closing) = 0;
