@@ -1,3 +1,9 @@
+2001-05-24  Gary V. Vaughan  <gary@gnu.org>
+
+	From "Steve M. Robbins" <steven.robbins@videotron.ca>
+	* automake.in (scan_one_configure_file): Cope with AC_CONFIG_FILES
+	macros introduced in autoconf-2.50.
+
 2001-05-21  Gary V. Vaughan  <gary@gnu.org>
 
 	From Christian Holm Christensen <cholm@hehi03.nbi.dk>:
